--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ title: Andy Taylor
 #logo: logo url in this repo goes here
 #description: this goes here
 #show_downloads: false
-there: jekyll-theme-minimal
+there: jekyll-theme-architect
